feat *added updated colab for text data stuff

--- a/notebooks/working_with_text_data.ipynb
+++ b/notebooks/working_with_text_data.ipynb
@@ -83,7 +83,7 @@
         "id": "5OB5ORW3D7c-",
         "outputId": "4e095509-ac6d-4a1b-bf0f-d59724f823b5"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -123,7 +123,7 @@
         "id": "cxCQU0npGyIP",
         "outputId": "c58f0536-da0e-43d6-d5ba-f16543fb59c6"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -173,7 +173,7 @@
       "metadata": {
         "id": "5E3PkuEkOP-a"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -204,7 +204,7 @@
       "metadata": {
         "id": "8u42KQaT59QC"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -236,7 +236,7 @@
         "id": "CoZ_rjP9FQ9_",
         "outputId": "6909bf12-a697-4791-849d-27b928a4bae5"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -282,7 +282,7 @@
         "id": "29Qzy3TsGSNL",
         "outputId": "cd1a0558-3dd9-427d-abc3-4b7da6db9e3d"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -325,7 +325,7 @@
         "id": "vpycGsFNQGBf",
         "outputId": "83136807-fc55-4023-a9d8-b2437c7ec412"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -375,7 +375,7 @@
         },
         "outputId": "bba84794-c607-4474-c6c6-97927c49e28d"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -402,10 +402,157 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Creating Dataset / Dataloaders\n",
+        "\n",
+        "Important functionality to practice, might delete from my codebase and replicate for practice un"
+      ],
+      "metadata": {
+        "id": "clduulI-J8xU"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import torch\n",
+        "from torch.utils.data import Dataset, DataLoader\n",
+        "import tiktoken\n",
+        "\n",
+        "# Initialize the tokenizer\n",
+        "byte_tokenizer = tiktoken.get_encoding(\"gpt2\")\n",
+        "\n",
+        "class GPTDatasetV1(Dataset):\n",
+        "  '''\n",
+        "  input: raw text, tokenizer selection, length of\n",
+        "  '''\n",
+        "  def __init__(self, txt, tokenizer, max_length, stride):\n",
+        "      self.input_ids = []\n",
+        "      self.target_ids = []\n",
+        "\n",
+        "      # Tokenize the entire text\n",
+        "      token_ids = tokenizer.encode(txt, allowed_special={\"<|endoftext|>\"})\n",
+        "      assert len(token_ids) > max_length, \"Number of tokenized inputs must at least be equal to max_length+1\"\n",
+        "\n",
+        "      # Use a sliding window to chunk the book into overlapping sequences of max_length\n",
+        "      for i in range(0, len(token_ids) - max_length, stride):\n",
+        "          input_chunk = token_ids[i:i + max_length]\n",
+        "          target_chunk = token_ids[i + 1: i + max_length + 1]\n",
+        "          self.input_ids.append(torch.tensor(input_chunk))\n",
+        "          self.target_ids.append(torch.tensor(target_chunk))\n",
+        "\n",
+        "  def __len__(self):\n",
+        "      return len(self.input_ids)\n",
+        "\n",
+        "  def __getitem__(self, idx):\n",
+        "      return self.input_ids[idx], self.target_ids[idx]\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "b9O3diH7Ke-v"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "batch size is how many words you want per example like 3 is `['the', 'cat', 'is']`. 128 refers to the"
+      ],
+      "metadata": {
+        "id": "yELBoyVeNItt"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def create_dataloader_v1(txt, batch_size=4, max_length=256,\n",
+        "                         stride=128, shuffle=True, drop_last=True,\n",
+        "                         num_workers=0):\n",
+        "\n",
+        "    # Initialize the tokenizer\n",
+        "    tokenizer = byte_tokenizer\n",
+        "\n",
+        "    # Create dataset\n",
+        "    dataset = GPTDatasetV1(txt, tokenizer, max_length, stride)\n",
+        "\n",
+        "    # Create dataloader\n",
+        "    dataloader = DataLoader(\n",
+        "        dataset,\n",
+        "        batch_size=batch_size,\n",
+        "        shuffle=shuffle,\n",
+        "        drop_last=drop_last,\n",
+        "        num_workers=num_workers\n",
+        "    )\n",
+        "\n",
+        "    return dataloader\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "zbqg2zEXKbf1"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "this loads the data for trainig, each index mapping to it's corresponding truth label (one word at a time)."
+      ],
+      "metadata": {
+        "id": "dlwomBg3PuIN"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "with open(\"data/the-verdict.txt\", \"r\", encoding=\"utf-8\") as f:\n",
+        "    raw_text = f.read()\n",
+        "\n",
+        "dataloader = create_dataloader_v1(\n",
+        "    raw_text, batch_size=1, max_length=4, stride=1, shuffle=False #stride 1 is one after the ote\n",
+        ")\n",
+        "\n",
+        "dataloader_large = create_dataloader_v1(\n",
+        "    raw_text, batch_size=8, max_length=4, stride=4, shuffle=False #stride 1 is one after the ote\n",
+        ")\n",
+        "data_iter = iter(dataloader)\n",
+        "first_batch = next(data_iter)\n",
+        "print(first_batch)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Gt50DyRxKynd",
+        "outputId": "0da8ba20-d214-4f56-c91b-d1ceed28b2b7"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[tensor([[  40,  367, 2885, 1464]]), tensor([[ 367, 2885, 1464, 1807]])]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Create Token Embeddings"
+      ],
+      "metadata": {
+        "id": "mZqY0i40SL1y"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "b9O3diH7Ke-v"
+        "id": "eMfoq6qzK0Hj"
       },
       "execution_count": null,
       "outputs": []
