--- a/notebooks/attention_mechanisms.ipynb
+++ b/notebooks/attention_mechanisms.ipynb
@@ -1,21 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "5y_Y9UJaV3AP"
+      },
       "source": [
         "## What is attention mechanism\n",
         "\n",
@@ -23,13 +12,13 @@
         "*  Attention mechanisms changes the original vector with maybe multiple meanings by considering it's context. SUPA interesting.\n",
         "* Even more, when the weights are applied, a vector for 'bat'  (the animal) can be shifted into a direction of maybe caves, blindness, etc..\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "5y_Y9UJaV3AP"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "zzxMiHQJXgFl"
+      },
       "source": [
         "### Omega -> Context Vector\n",
         "\n",
@@ -61,10 +50,7 @@
         "z_i = \\sum_{j=1}^{n} \\alpha_{ij} V_j\n",
         "$$\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "zzxMiHQJXgFl"
-      }
+      ]
     },
     {
       "cell_type": "code",
@@ -88,6 +74,9 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "-rYHoWa9bD1W"
+      },
       "source": [
         "### Simple Calculation of Attention Weights\n",
         "\n",
@@ -117,13 +106,28 @@
         "$$\n",
         "\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "-rYHoWa9bD1W"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "aS9rW5eZZBdi",
+        "outputId": "63d7e02c-617e-40bb-e578-8fdf77528fc2"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "6\n",
+            "tensor([0.9544, 1.4950, 1.4754, 0.8434, 0.7070, 1.0865])\n"
+          ]
+        }
+      ],
       "source": [
         "query = inputs[1]\n",
         "\n",
@@ -135,28 +139,13 @@
         "  attention_score_x2[index] = torch.dot(x_i, query)\n",
         "\n",
         "print(attention_score_x2)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "aS9rW5eZZBdi",
-        "outputId": "63d7e02c-617e-40bb-e578-8fdf77528fc2"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "6\n",
-            "tensor([0.9544, 1.4950, 1.4754, 0.8434, 0.7070, 1.0865])\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "8OHo7FCZe8-p"
+      },
       "source": [
         "### Normalizing\n",
         "\n",
@@ -205,13 +194,27 @@
         "$$\n",
         "\\text{softmax}(x_i) = \\frac{e^{x_i}}{\\sum_{j=1}^{n} e^{x_j}}\n",
         "$$\n"
-      ],
-      "metadata": {
-        "id": "8OHo7FCZe8-p"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "cRqoiQ9dbXQI",
+        "outputId": "be79ac02-5524-4721-d742-f91294bdaf8c"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Refined Attention Weights: tensor([0.1385, 0.2379, 0.2333, 0.1240, 0.1082, 0.1581])\n"
+          ]
+        }
+      ],
       "source": [
         "\n",
         "\n",
@@ -221,27 +224,13 @@
         "\n",
         "attn_weights_2_solid = torch.softmax(attention_score_x2, dim=0)\n",
         "print(\"Refined Attention Weights:\", attn_weights_2_solid)\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "cRqoiQ9dbXQI",
-        "outputId": "be79ac02-5524-4721-d742-f91294bdaf8c"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Refined Attention Weights: tensor([0.1385, 0.2379, 0.2333, 0.1240, 0.1082, 0.1581])\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "AlKfsVEgj95S"
+      },
       "source": [
         "### Finalizing the Calculation of $z$\n",
         "$$\n",
@@ -303,21 +292,11 @@
         "\\end{bmatrix} = z_2 =\\sum_j \\alpha_{2j}V_j\n",
         "$$\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "AlKfsVEgj95S"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "context_vector = torch.empty(inputs.shape[0])\n",
-        "\n",
-        "for (index, x_j) in enumerate(query):\n",
-        "  context_vector += attn_weights_2_solid[index] * x_j\n",
-        "\n",
-        "print(context_vector)\n"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -325,34 +304,55 @@
         "id": "5czdQmfue-1k",
         "outputId": "e2db830d-9320-431f-f17b-6f21acd23cb9"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "tensor([0.4371, 0.4371, 0.4371, 0.4371, 0.4371, 0.4371])\n"
           ]
         }
+      ],
+      "source": [
+        "context_vector = torch.empty(inputs.shape[0])\n",
+        "\n",
+        "for (index, x_j) in enumerate(query):\n",
+        "  context_vector += attn_weights_2_solid[index] * x_j\n",
+        "\n",
+        "print(context_vector)\n"
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Computing Attention Weights for all Input Tokens"
-      ],
       "metadata": {
         "id": "nsQCSvQFjsnf"
-      }
+      },
+      "source": [
+        "## Computing Attention Weights for all Input Tokens (3.3.2)"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "embEVgvdkrQr"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
