feat *added fully updated notebook *added text generation's first version

--- a/notebooks/generate_text.ipynb
+++ b/notebooks/generate_text.ipynb
@@ -25,7 +25,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "Qi3Bu5A7nFKp"
       },
@@ -111,7 +111,7 @@
       "metadata": {
         "id": "OfFfYSKKrj5L"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -247,9 +247,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZUo6wy0byzLX",
-        "outputId": "27b94da9-fb3c-4627-d149-77c9e67dabe6"
+        "outputId": "9fc8fe79-0ce8-4ebd-b785-6b1471c16600"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -284,9 +284,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c66ad7c2-d7dd-485b-aa0f-e0249546624e"
+        "outputId": "b0188ae8-0aa6-423f-a4b7-5ced4e93b5c3"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -330,9 +330,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "EO7MOQZx2lAa",
-        "outputId": "ab9f655e-2e66-4c80-ffb3-45295cc5bfd5"
+        "outputId": "03eccc02-7a63-4f7c-8b08-69fd4eaf553f"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -367,9 +367,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "7ec7830f-3536-48f4-fdd0-7c81ae1e1cb1"
+        "outputId": "2958da58-c277-4833-c627-5560d1a5986b"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -400,9 +400,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "HkN4nEgJ7IbJ",
-        "outputId": "3ed96031-04a4-4479-bd40-a2891e6d847a"
+        "outputId": "e514ec70-1659-4a44-a487-b2c56069adde"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -450,7 +450,7 @@
       "metadata": {
         "id": "OgBqNuLl85DG"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -480,9 +480,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "O7uCPpX_AGxK",
-        "outputId": "2ef2d50d-b1fe-4019-e9a8-ed8707315f04"
+        "outputId": "9784a725-1469-4238-dc1e-75961de5a458"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -523,7 +523,7 @@
       "metadata": {
         "id": "qPvIvBYrGtoI"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -564,9 +564,9 @@
           "height": 307
         },
         "id": "pv1QuuwBKuDB",
-        "outputId": "a1082fc5-2022-4615-dc99-414b7573bfc6"
+        "outputId": "d47eb1c5-0c62-4318-bc3f-e8bbb8fe3b1e"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "display_data",
@@ -598,7 +598,7 @@
       "metadata": {
         "id": "OncGq5yaKwun"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -616,9 +616,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0f13263b-eb6f-48aa-d460-c0977cc8dc02"
+        "outputId": "f03cb97b-666a-4e12-f308-54828ebf34aa"
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -640,14 +640,29 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "Ok"
-      ],
+      "source": [],
       "metadata": {
-        "id": "srr0MW_RaVrl"
+        "id": "srr0MW_RaVrl",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 141
+        },
+        "outputId": "ccabc617-8637-42b4-a6da-2c2c8f320e1c"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'Ok' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-4269539712.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mOk\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m: name 'Ok' is not defined"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -726,7 +741,7 @@
       "metadata": {
         "id": "z8pXc0lqekM0"
       },
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -751,26 +766,10 @@
         "print_gradients(model_without_shortcut, sample_input)"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "lJiLVh8Ce05V",
-        "outputId": "0e5ddfca-ed0e-4ac5-8910-4204c6058dcb"
+        "id": "lJiLVh8Ce05V"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "layers.0.0.weight has gradient mean of 0.00020173584925942123\n",
-            "layers.1.0.weight has gradient mean of 0.00012011159560643137\n",
-            "layers.2.0.weight has gradient mean of 0.0007152040489017963\n",
-            "layers.3.0.weight has gradient mean of 0.0013988736318424344\n",
-            "layers.4.0.weight has gradient mean of 0.005049645435065031\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -782,26 +781,10 @@
         "print_gradients(model_with_shortcut, sample_input)"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "GkVeF4tOkus3",
-        "outputId": "99b4105f-04ce-4225-8ee9-7b4569982017"
+        "id": "GkVeF4tOkus3"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "layers.0.0.weight has gradient mean of 0.22169791162014008\n",
-            "layers.1.0.weight has gradient mean of 0.20694105327129364\n",
-            "layers.2.0.weight has gradient mean of 0.32896995544433594\n",
-            "layers.3.0.weight has gradient mean of 0.2665732204914093\n",
-            "layers.4.0.weight has gradient mean of 1.3258540630340576\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -882,7 +865,7 @@
       "metadata": {
         "id": "F6PPetNZnjWX"
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -923,7 +906,7 @@
       "metadata": {
         "id": "pj_9l9yZkwk-"
       },
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -941,9 +924,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Yx6Wm25Ynbmw",
-        "outputId": "c614afee-4107-4936-e344-cef9d2656753"
+        "outputId": "f8474875-3ca3-4d03-ff62-6cbae9049541"
       },
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -996,7 +979,7 @@
       "metadata": {
         "id": "M64ucGdjoFqW"
       },
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -1024,9 +1007,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "MlSFbBcLqWxu",
-        "outputId": "98c8bfe1-bde2-4b0d-a2dd-0cb7472f8308"
+        "outputId": "c76cf506-aee1-4e01-e7ef-3d829099ca25"
       },
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
@@ -1046,8 +1029,7 @@
             "         [ 0.0882, -0.3552, -0.3527,  ...,  1.2930,  0.0053,  0.1898],\n",
             "         [ 0.6091,  0.4702, -0.4094,  ...,  0.7688,  0.3787, -0.1974],\n",
             "         [-0.0612, -0.0737,  0.4751,  ...,  1.2463, -0.3834,  0.0609]]],\n",
-            "       grad_fn=<UnsafeViewBackward0>)\n",
-            "Total number of parameters: 163,009,536\n"
+            "       grad_fn=<UnsafeViewBackward0>)\n"
           ]
         }
       ]
@@ -1063,9 +1045,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "CXfYRy-brvxg",
-        "outputId": "e37161bc-a830-49e3-85bd-3db778f6726e"
+        "outputId": "17656c09-aa1d-481e-d4ea-d345520d9fc9"
       },
-      "execution_count": null,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
@@ -1088,9 +1070,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "qBDPO9VFtta8",
-        "outputId": "1b915c6a-6022-48b2-ca3b-ac8571d6d6ce"
+        "outputId": "c0eb9cc9-9707-4341-b97b-71f548d074dc"
       },
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
@@ -1102,10 +1084,140 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Generate Text"
+      ],
+      "metadata": {
+        "id": "g2iJF6b9levC"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def generate_text_simple(model, idx, max_new_tokens, context_size):\n",
+        "    for _ in range(max_new_tokens):\n",
+        "\n",
+        "        idx_cond = idx[:, -context_size:] #get only the context length tokens\n",
+        "\n",
+        "\n",
+        "        with torch.no_grad():\n",
+        "            logits = model(idx_cond) #pass it through the model.\n",
+        "\n",
+        "        logits = logits[:, -1, :]\n",
+        "\n",
+        "        probas = torch.softmax(logits, dim=-1)  # (batch, vocab_size)\n",
+        "\n",
+        "        idx_next = torch.argmax(probas, dim=-1, keepdim=True)  # (batch, 1)\n",
+        "\n",
+        "        idx = torch.cat((idx, idx_next), dim=1)  # (batch, n_tokens+1)\n",
+        "\n",
+        "    return idx"
+      ],
+      "metadata": {
+        "id": "7JENMwb5kSa3"
+      },
+      "execution_count": 23,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import tiktoken\n",
+        "\n",
+        "tokenizer = tiktoken.get_encoding(\"gpt2\")\n",
+        "\n",
+        "start_context = \"Hello, I am\"\n",
+        "encoded = tokenizer.encode(start_context)\n",
+        "print(\"encoded:\", encoded)\n",
+        "encoded_tensor = torch.tensor(encoded).unsqueeze(0)\n",
+        "print(\"encoded_tensor.shape:\", encoded_tensor.shape)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3wPhiDSFlgyy",
+        "outputId": "e9a3570c-dcc9-4e85-b7d5-bd83325b8e09"
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "encoded: [15496, 11, 314, 716]\n",
+            "encoded_tensor.shape: torch.Size([1, 4])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model.eval() # no dropouts because we're not traiing\n",
+        "\n",
+        "out = generate_text_simple(\n",
+        "    model=model,\n",
+        "    idx=encoded_tensor,\n",
+        "    max_new_tokens=6,\n",
+        "    context_size=GPT_CONFIG_124M[\"context_length\"]\n",
+        ")\n",
+        "\n",
+        "print(\"Output:\", out)\n",
+        "print(\"Output length:\", len(out[0]))\n",
+        "print(\"Output shape:\", out.shape)\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "hQDCU7u3uoRn",
+        "outputId": "19e769c7-e9ed-4a68-bc90-4e7c57e80485"
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Output: tensor([[15496,    11,   314,   716, 27018, 24086, 47843, 30961, 42348,  7267]])\n",
+            "Output length: 10\n",
+            "Output shape: torch.Size([1, 10])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "decoded_text = tokenizer.decode(out.squeeze(0).tolist())\n",
+        "print(decoded_text)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ByLVKgBiu3-m",
+        "outputId": "d7bd1784-249b-49f7-b5d0-1f694a5e6ac4"
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello, I am Featureiman Byeswickattribute argue\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "mGhb3cgHt42A"
+        "id": "e3fAivdkvCw7"
       },
       "execution_count": null,
       "outputs": []
